# gflags

./: AdditionalInfo.txt  CMakeLists.txt  README.md
debian/: copyright  package.sh
src/: gflags.cc
src/windows/: config.h  port.cc
src/windows/gflags/: gflags_declare.h
